Swagger docs actualization. Direct vesting operations
